--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
     testImplementation 'org.apache.groovy:groovy-all:4.0.13'
 
+    // testcontainers
+    testImplementation 'org.testcontainers:spock:1.20.1'
+    testImplementation 'org.testcontainers:mariadb:1.20.1'
+
     // 런타임에 클래스 기반 spock mock을 만들기 위해서 필요
     testImplementation('net.bytebuddy:byte-buddy:1.12.10')
 }
