--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
+    id 'org.springframework.boot' version '2.6.7'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'org.springframework.boot' version '3.3.3'
-    id 'io.spring.dependency-management' version '1.1.6'
     id 'groovy'
 }
 
@@ -36,12 +36,13 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // handlebars
+    implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.4'
 
     // spock
-    testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
-    testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
-    testImplementation 'org.apache.groovy:groovy-all:4.0.13'
+    testImplementation('org.spockframework:spock-core:2.1-groovy-3.0')
+    testImplementation('org.spockframework:spock-spring:2.1-groovy-3.0')
 
     // testcontainers
     testImplementation 'org.testcontainers:spock:1.20.1'
@@ -54,8 +55,8 @@ dependencies {
     implementation 'org.springframework.retry:spring-retry'
 
     // mockWebServer
-    testImplementation('com.squareup.okhttp3:okhttp:4.11.0')
-    testImplementation('com.squareup.okhttp3:mockwebserver:4.11.0')
+    testImplementation('com.squareup.okhttp3:okhttp:4.10.0')
+    testImplementation('com.squareup.okhttp3:mockwebserver:4.10.0')
 
 
 }
