--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,14 +30,19 @@ spring:
     url: jdbc:mariadb://localhost:3306/pharmacy-recommendation
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
-  data:
-    redis:
+  redis:
       host: localhost
       port: 6379
   jpa:
     hibernate:
       ddl-auto: validate
     show-sql: true
+
+pharmacy:
+  recommendation:
+    base:
+      url: http://localhost:8080/dir/
+
 ---
 spring:
   config:
