--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,10 @@
 spring:
   profiles:
-    active: local # default
+    active: local # default profile
     group:
       local:
-        - local
         - common
       prod:
-        - prod
         - common
 
 ---
@@ -31,11 +29,11 @@ spring:
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
   redis:
-      host: localhost
-      port: 6379
+    host: localhost
+    port: 6379
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
     show-sql: true
 
 pharmacy:
