--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,11 +1,16 @@
 spring:
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
-    url: jdbc:tc:mariadb:10:///
+    url: jdbc:tc:mariadb:10:///pharmacy-recommendation
   jpa:
     hibernate:
       ddl-auto: create
     show-sql: true
+
+pharmacy:
+  recommendation:
+    base:
+      url: http://localhost/dir/
 
 kakao:
   rest:
