feat: Web static resources 설정 추가
YAML 파일에 web static-locations 설정을 추가하여 정적 리소스 파일들을 `/static/` 경로에서 로드하도록 설정함.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,10 @@ spring:
       ddl-auto: validate
     show-sql: true
 
+  web:
+    resources:
+      static-locations: classpath:/static/
+
 pharmacy:
   recommendation:
     base:
