chore: 애플리케이션 로깅 설정 변경
애플리케이션의 yaml 설정 파일에서 com.example.phamnav 및 org.springframework.data.redis 경로에 대한 로깅 레벨을 DEBUG로 설정함. 더 광범위한 애플리케이션 로깅이 가능해져 문제 진단 및 성능 분석에 유리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,12 +65,9 @@ pharmacy:
 
 logging:
   level:
+    root: INFO
     com.example.phamnav: DEBUG
-    org:
-      springframework:
-        data:
-          redis: DEBUG
-          kafka: DEBUG
+    org.springframework.data.redis: DEBUG
 
 ---
 spring:
