--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
     // https://github.com/seruco/base62
     implementation 'io.seruco.encoding:base62:0.1.3'
-
+    implementation 'commons-codec:commons-codec:1.15'
     // mockWebServer
     testImplementation('com.squareup.okhttp3:okhttp:4.10.0')
     testImplementation('com.squareup.okhttp3:mockwebserver:4.10.0')
@@ -66,11 +66,16 @@ test {
 }
 
 // $ ./gradlew clean build -PKAKAO_REST_API_KEY={api key 값} 명령어로 전체 테스트 및 빌드하여 jar 파일 생성
+//processTestResources {
+//    boolean hasProperty = project.hasProperty("KAKAO_REST_API_KEY")
+//    System.out.println("Set kakao rest api key: $hasProperty")
+//    filesMatching('**/application.yml') {
+//        expand(project.properties)
+//    }
+//}
 processTestResources {
-    boolean hasProperty = project.hasProperty("KAKAO_REST_API_KEY")
-    System.out.println("Set kakao rest api key: $hasProperty")
     filesMatching('**/application.yml') {
-        expand(project.properties)
+        expand(project.properties + [KAKAO_REST_API_KEY: System.getenv('KAKAO_REST_API_KEY') ?: project.findProperty('KAKAO_REST_API_KEY')])
     }
 }
 
